@@ -42,7 +42,7 @@ else:
 %	input feta-bolletjes;	
 %	input feta-banier;
 %	input feta-eindelijk;
-%	input feta-klef;
+	input feta-klef;
 	input feta-toevallig;
 %	input feta-schrift;
 %	input feta-haak;
